invalid_sym_arg_keywords_test/invalid_sym_arg_keywords_test_6.src
.IPPcode24
WRITE string@henlo LF@a